--- a/css/main.scss
+++ b/css/main.scss
@@ -17,3 +17,6 @@ Horizontal Offset: 0px
 Vertical Offset: 4px
 Blur: 4px
 Color: Black, with an opacity of 20% */
+
+// import vars
+@use './global.scss' as *;
