--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -1,1 +1,9 @@
-// $primary: #335576;
+/*  The background color must be #FFFFFF.
+    The site logo/wordmark color must be #335576
+    The currently active page must be underlined using the color #DB7A4E */
+
+$wordmark: #335576;
+$background: #ffffff;
+$highlight: #db7a4e;
+$secondary: #fefaf5;
+
