add a footer/header to all pages

--- a/css/destinations.scss
+++ b/css/destinations.scss
@@ -6,4 +6,4 @@ They must have 3 Days of Itinerary activities including:
 A title for the day of the week
 4 Itinerary activities (e.g. Breakfast, Lunch, Dinner, Snorkeling)
 Activities must have a background of #FEFAF5 */
-@use "./global.scss" as *;
+@use "./partials/global" as *;
