--- a/css/main.scss
+++ b/css/main.scss
@@ -61,7 +61,7 @@ Vertical Offset: 4px
 Blur: 4px
 Color: Black, with an opacity of 20% */
 
-// Card: outside box. Here is where the shadows and borders of landing page are set
+// Card. Outside box. Here is where the shadows and borders of landing page are set
 .card-img {
   border: 1px solid rgba($color: #000000, $alpha: 20%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
