--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@ The slogan color must be #335576
 The ‘Get Started’ button background color must be #DB7A4E */
 
 // import vars doesn't come from _global.scss TODO
-@use "./partials/global";
+@use "./partials/global" as *;
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
 // Hero
@@ -61,11 +61,20 @@ Vertical Offset: 4px
 Blur: 4px
 Color: Black, with an opacity of 20% */
 
-// Card. Outside box. Here is where the shadows and borders of landing page are set
+// Card. Outside box. Here is where the shadows and borders of landing page are set, font color on main page
+.card__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  text-decoration: none;
+}
 .card-img {
   border: 1px solid rgba($color: #000000, $alpha: 20%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-  color: $background;
+  color: $background; // font
 }
 
 // Cards' background & titles styling
