--- a/css/partials/_global.scss
+++ b/css/partials/_global.scss
@@ -1,7 +1,3 @@
-/* FOOTER, The background color must be #FEFAF5
-The footer titles and text must be the color #335576
-The footer subtitles must be the color #DB7A4E */
-
 @use "./variables" as *;
 @use "./mixins" as *;
 
@@ -31,7 +27,7 @@ button {
 .padding {
   padding-left: 10rem;
 }
-// Navigation
+// /* Navigation */
 header {
   width: 100%;
   height: 4rem;
@@ -43,7 +39,7 @@ header {
   top: 0;
 }
 html body {
-  padding-top: 4rem;// for fixed navbar
+  padding-top: 4rem; // for fixed navbar
 }
 .wordmark {
   color: $wordmark;
@@ -53,7 +49,6 @@ html body {
   margin: auto;
   display: flex;
   justify-content: space-between;
-  // justify-content: space-evenly;
   align-items: center;
 }
 .highlight {
@@ -87,6 +82,9 @@ html body {
   display: flex;
 }
 
+/* FOOTER, The background color must be #FEFAF5
+The footer titles and text must be the color #335576
+The footer subtitles must be the color #DB7A4E */
 // FOOTER
 footer {
   padding-top: 4rem;
@@ -95,16 +93,20 @@ footer {
   padding-left: 7rem;
   display: flex;
   justify-content: center;
+  & h1 {
+    padding-left: 0;
+  }
 }
+// footer h1 {
+//   padding-left: 0;
+// }
 .footer__parent {
   justify-content: center;
   width: 80%;
   display: flex;
   justify-content: center;
 }
-footer h1 {
-  padding-left: 0;
-}
+
 .section {
   display: flex;
   flex-direction: column;
