hero is responsive now

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,12 +23,12 @@ main {
   position: relative;
 }
 .hero--right {
-  width: 50%;
+  width: 49vh;
   text-align: center;
   position: relative;
 }
 .hero--right--img-size {
-  width: 70%;
+  width: 100%;
 }
 button {
   width: 50%;
